bindings/lisp/doremir/graph.lisp

(in-package :audio-engine)
(define-foreign-type graph-type () () (:actual-type :pointer))
(define-parse-method graph () (make-instance 'graph-type))
(defclass graph () ((graph-ptr :initarg :graph-ptr)))
(defmethod translate-to-foreign (x (type graph-type)) (slot-value x 'graph-ptr))
(defmethod translate-from-foreign (x (type graph-type)) (make-instance 'graph :graph-ptr x))
(defctype graph-node ptr)
(defctype graph-edge ptr)
(defctype graph-node-list list)
(defctype graph-edge-list list)
(defcfun (graph-empty "doremir_graph_empty") graph)
(defcfun (graph-insert "doremir_graph_insert") graph (a graph-node) (b graph))
(defcfun (graph-remove "doremir_graph_remove") graph (a graph-node) (b graph))
(defcfun (graph-destroy "doremir_graph_destroy") :void (a graph))
(defcfun (graph-connect "doremir_graph_connect") graph (a graph-edge) (b graph-node) (c graph-node) (d graph))
(defcfun (graph-disconnect "doremir_graph_disconnect") graph (a graph-node) (b graph-node) (c graph))
(defcfun (graph-from-list "doremir_graph_from_list") graph (a list))
(defcfun (graph-to-list "doremir_graph_to_list") list (a graph))